@@ -11,6 +11,7 @@ MoreTraits.settings.AlbinoAnnounce = true;
 MoreTraits.settings.MartialDamage = false;
 MoreTraits.settings.VagabondAnnounce = false;
 MoreTraits.settings.HardyNotifier = false;
+MoreTraits.settings.DrinkNotifier = false;
 
 if ModOptions and ModOptions.getInstance then
     local function onModOptionsApply(optionValues)
@@ -23,7 +24,8 @@ if ModOptions and ModOptions.getInstance then
         MoreTraits.settings.AlbinoAnnounce = optionValues.settings.options.AlbinoAnnounce;
         MoreTraits.settings.MartialDamage = optionValues.settings.options.MartialDamage;
         MoreTraits.settings.VagabondAnnounce = optionValues.settings.options.VagabondAnnounce;
-		MoreTraits.settings.HardyNotifier = optionValues.settings.options.HardyNotifier;
+        MoreTraits.settings.HardyNotifier = optionValues.settings.options.HardyNotifier;
+        MoreTraits.settings.DrinkNotifier = optionValues.settings.options.DrinkNotifier;
     end
     local SETTINGS = {
         options_data = {
@@ -91,13 +93,20 @@ if ModOptions and ModOptions.getInstance then
                 OnApplyMainMenu = onModOptionsApply,
                 OnApplyInGame = onModOptionsApply,
             },
-			HardyNotifier = {
-				name = "UI_MoreTraits_Options_HardyNotifier",
-				tooltip = "UI_MoreTraits_Options_HardyNotifier_ToolTip",
-				default = true,
-				OnApplyMainMenu = onModOptionsApply,
-				OnApplyInGame = onModOptionsApply,
-			},
+            HardyNotifier = {
+                name = "UI_MoreTraits_Options_HardyNotifier",
+                tooltip = "UI_MoreTraits_Options_HardyNotifier_ToolTip",
+                default = true,
+                OnApplyMainMenu = onModOptionsApply,
+                OnApplyInGame = onModOptionsApply,
+            },
+            DrinkNotifier = {
+                name = "UI_MoreTraits_Options_DrinkNotifier",
+                tooltip = "UI_MoreTraits_Options_DrinkNotifier_ToolTip",
+                default = true,
+                OnApplyMainMenu = onModOptionsApply,
+                OnApplyInGame = onModOptionsApply,
+            },
         },
         mod_id = 'ToadTraits',
         mod_shortname = 'More Traits',
